Ensure the system tray detailed bubble open correctly on all devices.

System tray detail bubble is not opened correctly on some devices like fizz, stumpy, guado, etc. The root cause is that the bubble_view_ of the SystemTrayBubble is skipped for doing the relayout after |system_tray_view_| has created items. This issue was introduced with the refatoring rev#511080.

https://chromium.googlesource.com/chromium/src/+/468c40314babc918db69d0db5cf71a41193fec7e [formerly 5507006ab8a796d105dc69b676bdd34e50c17ea5]

Fixed it by enforcing the |bubble_view_| to relayout. On devices with problem, |bubble_view_| is skipped for relayout since its bounds does not change.

Bug: 792673
Change-Id: I25c58c7fc4a48e3fabdee383baf15637de14a2cb
Reviewed-on: https://chromium-review.googlesource.com/907181
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Jenny Zhang <jennyz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535444}
Former-commit-id: adce5ebaf1dc580124c81163ecc57be3aaab6f33